--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
 
   <link rel="icon" type="image/png" sizes="32x32" href="../images/favicon-32x32.png">
   <link rel="stylesheet" type="text/css" href="css/main.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Fraunces:ital,opsz,wght@1,9..144,700&family=Montserrat:ital,wght@0,500;1,700&display=swap"
+    rel="stylesheet">
 
   <title>Frontend Mentor | Product preview card component</title>
 </head>
@@ -19,12 +24,12 @@
         <picture>
           <source media="(min-width: 650px)" src="images/image-product-desktop.jpg">
           <source media="(min-width: 300px)" src="images/image-product-desktop.jpg">
-          <img src="images/image-product-mobile.jpg">
+          <img src="images/image-product-mobile.jpg" alt="crystal bottle surrounded by lush leaves">
         </picture>
       </div>
     </div>
     <div class="perfume-title">
-      <hgroup class="Perfume"></hgroup>
+      <hgroup class="perfume">Perfume</hgroup>
       <h1>Gabrielle Essence Eau De Parfum</h1>
     </div>
     <div class="perfume-description">
@@ -36,14 +41,15 @@
       <s>$169.99</s>
     </div>
     <div class="cart">
-      <input type="button" value="Add to Cart" img src="images/icon-cart.svg">
+      <input type="button" value="Add to Cart">
     </div>
   </main>
   <footer>
     <div class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-      Coded by <a href="#">Your Name Here</a>.
+      Coded by <a href="#">Anjie M.F.</a>.
     </div>
   </footer>
 </body>
+
 </html>
